cat rental controller is up and ready

--- a/app/views/cats/edit.html.erb
+++ b/app/views/cats/edit.html.erb
@@ -3,7 +3,7 @@ input {
     margin: 10px;
 }
 </style>
-<h2>Update <%= @cat.name %></h2>
+<h2>Update <%= @cat.name %> 😎</h2>
 
 <%= render 'form', action: :edit, cat: @cat%>
 
