add logout button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,18 +13,18 @@
   <body>
     <% if !current_user.nil? %>
       <ul>
-        <li>Logged in as: <%= curent_user.email %> </li>
-        <li>
-          <form action="<%= session_url %>" method="POST">
-            <input type="hidden"
-                   name="authenticity_token"
-                   value="<%= form_authenticity_token %>">
-            <input type="hidden" name="_method" value="DELETE">
-            <input type="submit" value="Logout">
-          </form>
-        </li>
+         <li>loging in as <%= current_user.email %> </li>
+         <li>
+            <form action="<%= session_path %>" method="POST">
+              <input type="hidden"
+                     name="authenticity_token"
+                     value="<%= form_authenticity_token %>">
+              <input type="hidden" name="_method" value="DELETE">
+              <input type="submit" value="logout">
+            </form>  
+         </li>
       </ul>
-    <%end%>
+    <% end %>
     <%= yield %>
   </body>
 </html>
