--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  */
+ @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap');
  html, section, body, article, h1, h2, p, nav, main, figure {
      margin: 0;
      padding: 0;
@@ -22,7 +23,9 @@
      text-align: inherit;
      text-decoration: inherit;
      background: transparent;
-     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+     background-color: #24252A;
+     font-family: 'Montserrat', sans-serif;
  }
  /* HTML5 display-role reset for older browsers */
  article, aside, details, figcaption, figure, 
@@ -51,7 +54,7 @@ table {
     display: flex; 
     justify-content: space-between;
     align-items: center;
-    background-color: #65F4CD;
+    background-color: #24252A;
     box-sizing: border-box;
     height: 63px;
     padding: 0 20px;
@@ -87,4 +90,16 @@ div {
 }
 section.cat-index-holder {
     margin: 14px;
+}
+
+div li button a {
+    font-weight: 500;
+    font-family: 'Montserrat' sans-serif;
+    font-size: 16px;
+    color: white;
+    text-decoration: none;
+}
+.alert-login {
+    color: #d8000c;
+    background-color: #FFBABA;
 }
