--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,4 +48,9 @@
     </main>
     <%= yield %>
   </body>
+  <div class="footer">
+    Owner: Hassan tarif
+    <a href="mailto:hassantarif4@gmail.com">Mail me</a>
+    <%= yield :footer %>
+  </div>
 </html>
