--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,5 +22,5 @@
 
   <br>
 
-  <input type="submit" value="Create User" style="border: 10px; margin: 10px;">
+  <input type="submit" class="button_logout" value="Create User" style="border: 10px; margin: 10px;">
 </form>
