--- a/app/views/cat_rental_requests/new.html.erb
+++ b/app/views/cat_rental_requests/new.html.erb
@@ -24,5 +24,5 @@ input {
     <label for="end_date">End Date</label>
     <input type="date" name= "cat_rental_requests[end_date]" id="end_date"></input>
     <br>
-    <input type="submit" value="Send Request"></input>
+    <input type="submit" class="button_logout" value="Send Request"></input>
 </form>
