add email verifications<2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,8 @@
     </header>
     <div class="nav-login">
     <% if current_user.nil? %>
-      <a href="<%= signin_path %>">Sign In</a>
-      <a href="<%= signup_path %>">Sign Up</a>
+      <%= sign_in_user %>
+      <%= sign_up_user %>
     <% else %>
     </div>
     <div>
